commit after line removed css fix

--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,7 @@ body {
       padding: 8px;
   }
   span.checked{
-    text-decoration: line-through;
+    /*text-decoration: line-through;*/
     color: black;
   }
   
