--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,15 @@
 body {
     font-family: Lato;
     font-size: 13px;
-    background-color:rgb(89, 145, 189);
+    background-color:rgb(136, 168, 192);
     color: #fff;
   }
   h2{
+    margin-top: 30px;
   padding-left: 30px; 
   text-align: center;
   font-size: 3em;
+  
   }
   form{
     text-align: center;
@@ -33,6 +35,7 @@ body {
     color: #ffffff;
     background-color: rgb(36, 161, 22);
     font-size: 1.8em;
+    margin-left: 20px
   }
   ul{
     padding:0px 75px;
@@ -54,8 +57,16 @@ body {
     color: black;
   }
   
-  button{
+  .btn-Edit{
     font-weight: 600;
     color: white;
-    background-color: red;
+    background-color: rgb(55, 40, 168);
+    margin-right: 10px;
+    margin-left: 15px;
+  }
+
+  .btn-Delete {
+    font-weight: 600;
+    color: white;
+    background-color: rgb(217, 25, 25);
   }
